# rust-text-experiments

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  make_corpus.sh
.github/workflows/: fmt.yml
data/corpus/: corpus.txt  gen_text.py  generated_curated_corpus.txt  llm_generated_corpus.txt  make_corpus.sh  prompts.sh  sources.txt  system.txt
data/corpus/level_0/: corpus.corpus  corpus.txt  prompts.sh
data/corpus/level_1/: corpus.corpus  corpus.txt
data/corpus/level_2/: 3.txt  5.txt  corpus.corpus  corpus.txt
data/corpus/level_3/: 4.txt  auto_corpus.sh  corpus.corpus  corpus.txt
data/corpus/level_4/: 1.txt  2.txt  corpus.corpus  corpus.txt
docs/: attention_predictor.md  lstm_predictor.md  simple_predictor.md  tracing.md
src/: attention_block.rs  attention_predictor.rs  attention_predictor_large.rs  candle_autoencoder.rs  candle_model.rs  candle_predictor.rs  candle_utils.rs  embedding_utils.rs  encoder_decoder.rs  grad_accum.rs  layer_norm.rs  lstm_predictor.rs  main.rs  model_auto_rater.rs  model_tests.rs  models.rs  nn_model.rs  simple_predictor.rs  token_utils.rs
