[package]
name = "rust-text-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
colored = "3.0.0"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.2", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
